# django-tenants-smart-executor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  ci.yml
django_tenants_smart_executor/: __init__.py  executors.py
tests/: expected_initial_output.txt  expected_multiprocessing_output.txt  manage.py
tests/test_project/: settings.py  urls.py
tests/test_project/public_app/: apps.py  models.py
tests/test_project/public_app/management/commands/: create_client.py
tests/test_project/public_app/migrations/: 0001_initial.py
tests/test_project/tenant_app/: apps.py  models.py
tests/test_project/tenant_app/migrations/: 0001_initial.py
tests/tests/: test_needs_migrations.py
